wp24 fix button on small time pass

--- a/laterpay/asset_sources/scss/components/_purchase_button.scss
+++ b/laterpay/asset_sources/scss/components/_purchase_button.scss
@@ -55,7 +55,7 @@
     background: $laterpay-brand;
     border-radius: 4px !important;
     border: 0 !important;
-    box-shadow: none;
+    box-shadow: none!important;
     color: $text--inverse !important;
     cursor: pointer !important;
     float: right !important;
